<resources>
    <string name="app_name">Planificarea Bugetului Personal</string>
    <string name="nume_utilizatior_login">Nume utilizatior</string>
    <string name="parola_login">Parola</string>
    <string name="conectare_login">Conectare</string>
    <string name="inregistrare_login">Inregistrare</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nume_utilizator_signUp">Nume utilizator</string>
    <string name="inregistrare_signUp">Inregistrare</string>
    <string name="inregistrare_text_view">Inregistrare</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_error_username_message">Invalid username. Minim 3 characters!</string>
    <string name="login_error_email_message">Invalid email address. Please enter a valid email adress!</string>
    <string name="login_error_password_message">Invalid password.Minim 6 characters.Please enter a valid password!</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_results">Results</string>
    <string name="menu_logout">LogOut</string>
    <string name="login_username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">LogIn</string>
    <string name="header_candy_land">CANDY LAND</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_error_message">Please select an answer!</string>
    <string name="quiz_question_1_n">Question 1/n</string>
    <string name="quiz_here_will_be_a_question">Here will be a question</string>
    <string name="quiz_answer1">Answer1</string>
    <string name="quiz_answer2">Answer2</string>
    <string name="quiz_answer3">Answer3</string>
    <string name="quiz_answer4">Answer4</string>
    <string name="quiz_next">Next</string>
    <string name="result_your_score">Your Score</string>
    <string name="result_4_4">4/4</string>
    <string name="result_go_to_home_page">Go to home page</string>
    <string name="main_start_quiz">Start Quiz</string>
    <string name="score_give_riview">Give Riview</string>
    <string name="score_give_review">Give Review</string>
    <string name="review_name">Name</string>
    <string name="review_short_review">Short review</string>
    <string name="review_review">Review</string>
    <string name="review_save">Save</string>
    <string name="main_give_review">Give review</string>
    <string name="back_home_page_go_to_home_page">Go to home page</string>
    <string name="reviews_title_eviews">Reviews</string>
    <string name="review_review_about_application">Review about application</string>
    <string name="title_our_story">Our Story</string>
    <string name="about_us_description">Candy Land was created for genuine candy lovers. The energy, excitement and enthusiasm we experienced trying all the goodies there was all we needed to create one of the most vibrant candy stores in Romania . We at Candy Land believe that sweets make the world go round, they are a pleasant way to release yourself from daily stress, they can be a reason to meet friends, a delicious gift and much more. If you like sweets as much as we do, enter our online store and choose your favorite sweets from the hundreds of assortments just a click away. We have also prepared a quiz about sweets from which you can learn interesting things and have fun!</string>
    <string name="nav_reviews">Reviews</string>
    <string name="menu_reviews">Reviews</string>
    <string name="quiz_question">Question</string>
    <string name="sign_up">Sign-up</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up_inregistreaza">Sign-Up</string>
    <string name="menu_acasa">Acasa</string>
    <string name="menu_venit">Venit</string>
    <string name="menu_buget_alocat">Buget</string>
    <string name="menu_cheltuieli">Cheltuieli</string>
    <string name="menu_obiective">Obiective</string>
    <string name="username_header">Username</string>
    <string name="buna_username">Buna username</string>
    <string name="seteaza_venituri">Seteaza venituri</string>
    <string name="steaza_cheltuieli">Steaza cheltuieli</string>
    <string name="seteaza_bugetele">Seteaza bugetele</string>
    <string name="seteaza_obiective">Seteaza obiective</string>
    <string name="total_venituri">Total venituri:</string>
    <string name="buget_ramas">Buget ramas:</string>
    <string name="adauga_venit">Adauga venit</string>
    <string name="adauga_cheltuieli">Adauga cheltuieli</string>
    <string name="nume_utilizator">Nume utilizator</string>
    <string name="parola">Parola</string>
    <string name="conectare">Conectare</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="inregistrare_inregistrare">Inregistrare</string>
    <string name="email_inregistrare">Email</string>
    <string name="parola_inregistrare">Parola</string>
    <string name="inregistrare_buton">Inregistrare</string>
    <string name="nume_venit">Nume venit</string>
    <string name="suma_venit">Suma venit</string>
    <string name="adauga_venitul">Adauga venitul</string>
    <string name="title_activity_seteaza_cheltuieli2">SeteazaCheltuieliActivity2</string>
    <string name="introduteti_nume_cheltuiala">Introduceti nume cheltuiala</string>
    <string name="alege_categoria">Alege categoria</string>
    <string name="adauga_cheltuiala">Adauga cheltuiala</string>
    <string name="introduceti_suma_cheltuita">Introduceti suma cheltuita</string>
    <string name="alege_categoria_buget">Alege categoria</string>
    <string name="seteaza_suma_buget">Seteaza suma buget</string>


    <string name="add_bug_adauga_buget">Adauga buget</string>
    <string name="add_obb_denumirea_obiectivului">Denumirea obiectivului</string>
    <string name="add_obb_valorea_obiectivului">Valorea obiectivului</string>
    <string name="alege_categoria_add_buget">Alege Categoria</string>
    <string name="introduceti_suma_bugete">Introduceti suma</string>
    <string name="grafic">Grafic</string>


    <string name="acasa_buna_popescu_ana">Buna, Popescu Ana!</string>
    <string name="acasa_total_venituri_0_ron">Total Venituri: 0 Ron</string>
    <string name="acasa_total_cheltuieli_0_ron">Total cheltuieli: 0 Ron</string>
    <string name="acasa_buget_ramas_0_ron">Buget Ramas: 0 Ron</string>
    <string name="acasa_total_cheltuieli_ron">Total Cheltuieli: 0 Ron</string>
    <string name="introduceti_ziua_incasarii">Introduceti ziua incasarii</string>
    <string name="introduceti_ziua_efectuarii_cheltuielii">Introduceti ziua efectuarii cheltuielii</string>
    <string name="introduceti_luna_curenta">Introduceti luna curenta</string>
    <string name="venituri">Venituri</string>
    <string name="introduceti_bugetul_alocat">Introduceti bugetul alocat</string>
    <string name="introduceti_valoarea_bugetului">Introduceti valoarea bugetului</string>
    <string name="adauga_buget">Adauga buget</string>
    <string name="introduceti_nume_obiectiv">Introduceti nume obiectiv</string>
    <string name="valoare_obiectiv">Valoare obiectiv</string>
    <string name="adauga_obiectiv">Adauga obiectiv</string>
    <string name="sterge_venituri">Sterge</string>
    <string name="modifica_venituri">Modifica</string>
    <string name="provenienta_venit">Provenienta venit</string>
    <string name="suma_venit_lv">Suma</string>
    <string name="ron_venituri">RON</string>
    <string name="bugete_lv">Bugete</string>
    <string name="obiective_lv">Obiective</string>
    <string name="modifica_obiective">Modifica</string>
    <string name="sterge_obiective">Sterge</string>
    <string name="nume_obiectiv">Nume obiectiv</string>
    <string name="valoare_obiectiv_lv">Valoare obiectiv</string>
    <string name="ron_obiective">RON</string>
    <string name="status_obiective">Status</string>
    <string name="chetuieli_lv">Chetuieli</string>
    <string name="sterge_cheltuieli">Sterge</string>
    <string name="modifica_cheltuieli">Modifica</string>
    <string name="categoria_lv_group_cheltuieli">Categoria</string>
    <string name="denumire_cheltuieli">Denumire</string>
    <string name="suma_cheltuieli_lv">Suma</string>
    <string name="ron_cheltuieli">RON</string>
    <string name="inapoi_add_chetuieli">Inapoi</string>
    <string name="inapoi_add_obiective">Inapoi</string>
    <string name="inapoi_add_venituri">Inapoi</string>
    <string name="inapoi_add_bugete">Inapoi</string>
    <string name="procentaj_progress_bar">0%</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="selecteaza_data_incasarii">Selecteaza data incasarii</string>
    <string name="bugete_si_cheltuieli">Bugete si cheltuieli</string>
    <string name="email">Email</string>
    <string name="data">Data</string>


    <string-array name="spn_categorii_cheltuieli">
        <item>Mancare</item>
        <item>Diverstisment</item>
        <item>Casa</item>
        <item>Uz personal</item>
        <item>Altele</item>
    </string-array>

    <string-array name="spn_categorii_buget">
        <item>Mancare</item>
        <item>Diverstisment</item>
        <item>Casa</item>
        <item>Uz personal</item>
        <item>Altele</item>
    </string-array>


</resources>