<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdaugaCheltuieliActivity">

    <TextView
        android:id="@+id/popa_antonela_tv_alege_categoria_cheltuiala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/alege_categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/popa_antonela_spn_cetegorii_cheltuieli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popa_antonela_tv_alege_categoria_cheltuiala"
        android:entries="@array/spn_categorii_cheltuieli"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popa_antonela_til_nume_cheltuiala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/popa_antonela_spn_cetegorii_cheltuieli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popa_antonela_tiet_nume_cheltuiala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduteti_nume_cheltuiala" />



    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popa_antonela_til_suma_cheltuiala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/popa_antonela_til_nume_cheltuiala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popa_antonela_tiet_suma_cheltuiala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduceti_suma_cheltuita" />



    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/popa_antonela_btn_adauga_cheltuiala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adauga_cheltuiala"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>