<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="5dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/lv_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/row_item_tv_venituri_provenienta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:text="@string/provenienta_venit"
                android:textAllCaps="true"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/row_item_tv_venituri_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/data"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/row_item_tv_venituri_suma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/suma_venit_lv"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/row_item_tv_venituri_valuta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:text="@string/ron_venituri"
                    android:textAllCaps="true"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/row_item_tv_venituri_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="0dp"
                    android:text="Venit Fix"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/row_item_iv_venituri"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_more" />
    </LinearLayout>

</androidx.cardview.widget.CardView>


