<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdaugaObiectiveActivity">

    <TextView
        android:id="@+id/adauga_buget_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/alege_categoria_add_buget"/>

    <Spinner
        android:id="@+id/popa_antonela_spn_cetegorii_buget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:entries="@array/spn_categorii_buget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/adauga_buget_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_suma_bugete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/popa_antonela_spn_cetegorii_buget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popa_antonela_tiet_nume_cheltuiala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduceti_suma_bugete" />



    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/popa_antonela_marina_narcisa_grades_btn_adauga_cheltuiala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bug_adauga_buget"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>