<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeteazaBugetActivity">

    <ProgressBar
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarBugete"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></ProgressBar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_view_bugete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/popa_antonela_tv_alege_categoria_buget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/alege_categoria_buget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/popa_antonela_spn_cetegorii_buget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popa_antonela_tv_alege_categoria_buget"
            android:entries="@array/spn_categorii_buget"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popa_antonela_til_seteaza_suma_buget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/popa_antonela_spn_cetegorii_buget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popa_antonela_tiet_seteaza_suma_buget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/introduceti_valoarea_bugetului" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/popa_antonela_marina_narcisa_btn_adauga_buget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adauga_buget"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/popa_antonela_btn_adauga_bugete_inapoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inapoi_add_bugete"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>